[package]
name = "pg"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6.3"
hex = "0.4.3"
reqwest = { version = "0.12", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7.13"
