[package]
name = "pg"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6.3"
dotenv = "0.15.0"
hex = "0.4.3"
reqwest = { version = "0.12", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.0", features = ["full"] }
